[gd_scene load_steps=9 format=3 uid="uid://cttw0yg248mx8"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_6umwp"]
[ext_resource type="PackedScene" uid="uid://biennnk17886o" path="res://scenes/player/player.tscn" id="2_1xu78"]
[ext_resource type="Texture2D" uid="uid://q16e6fq42lkt" path="res://UltimateGodotIntro2D-main/resources/graphics/ground/stones.png" id="2_15n4i"]
[ext_resource type="PackedScene" uid="uid://d13snjfgy4cx1" path="res://scenes/level_objects/gate.tscn" id="2_vseq8"]
[ext_resource type="Texture2D" uid="uid://d16paymfpt1y3" path="res://UltimateGodotIntro2D-main/resources/graphics/decals/dirt_patch.png" id="3_85onq"]
[ext_resource type="Texture2D" uid="uid://d3uvfh8seirsb" path="res://UltimateGodotIntro2D-main/resources/graphics/tilesets/outside_walls.png" id="4_0cogs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h14lt"]
resource_name = "walls"
texture = ExtResource("4_0cogs")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSet" id="TileSet_h0qls"]
tile_size = Vector2i(390, 390)
sources/0 = SubResource("TileSetAtlasSource_h14lt")

[node name="level" type="Node2D"]
script = ExtResource("1_6umwp")

[node name="Ground" type="Node2D" parent="."]

[node name="Soil" type="Sprite2D" parent="Ground"]
texture_repeat = 2
texture = ExtResource("2_15n4i")
region_enabled = true
region_rect = Rect2(-1533, -1073, 5958, 3691)

[node name="Decoration" type="Sprite2D" parent="Ground"]
modulate = Color(0.894118, 0.827451, 0.619608, 1)
position = Vector2(110, 777)
texture = ExtResource("3_85onq")

[node name="TileMap" type="TileMap" parent="Ground"]
tile_set = SubResource("TileSet_h0qls")
format = 2
layer_0/tile_data = PackedInt32Array(-131076, 131072, 0, -131077, 65536, 0, -131078, 65536, 0, -131079, 65536, 0, -131080, 65536, 1, -65544, 0, 2, -8, 0, 2, 65528, 0, 2, 131064, 0, 2, -196602, 0, 0, -196601, 131072, 1, -131065, 0, 2, -65529, 0, 2, 7, 0, 2, 65543, 131072, 2, 65542, 65536, 0, 65541, 65536, 1, 131077, 0, 3, 196600, 0, 3)

[node name="Gate" parent="." instance=ExtResource("2_vseq8")]

[node name="player" parent="." instance=ExtResource("2_1xu78")]
position = Vector2(477, 454)

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="Projectiles" type="Node2D" parent="."]

[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="player_exited_gate" from="Gate" to="." method="_on_gate_player_exited_gate"]
[connection signal="grenade_input" from="player" to="." method="_on_player_grenade_input"]
[connection signal="laser_input" from="player" to="." method="_on_player_laser_input"]
